version 1.5.1, in progress
- Fix translation bug for VAR menus
- Fix bug in assignment of values returned from user-defined
  functions
- Small fix for helpfile formatting
- Add calculation of Gini coefficient and Lorenz curve to GUI
  Variable menu
- Provide option of including seasonal dummy variables in
  Dickey-Fuller tests
- Add two "genr" functions: qnorm (quantiles of normal distribution)
  and gini (Gini coefficient)

12/15/2005 version 1.5.0
- Add VECM (Vector Error Correction Models) for time-series
  data
- Add confidence ellipse option for two coefficients, in 
  model window menu
- New command "mle" : a general-purpose maximizer of log
  likelihood, using the BFGS algorithm -- works much like the
  "nls" command, taking a user-specified log likelihood function
  as input, along with (optionally) derivatives of the log
  likelihood with respect to the parameters
- More XLS importer fixes
- Add support for seasonal ARMA; add "sdiff" command (and
  corresponding function in genr) for creating seasonal
  differences
- Add capacity to produce time-series graphs with panel
  data sets
- Accommodate custom time-series frequencies
- Johansen cointegration test: extend to cover all 5 cases, 
  produce a fuller report (loadings, long-run matrix)
- Add bootstrapped confidence intervals for impulse responses 
  in VAR models
- Add test for multivariate normality of VAR residuals
- Add autocorrelation and ARCH tests for VAR equations
- Add printing of cross-equation covariance matrix for VARs
- Add combined plot of residuals for VARs
- Add combined impulse response plot for VARs
- Add log-likelihood, AIC and BIC for VARs
- Add inverse roots plot for VARs (Jack Lucchetti)
- Add log-likelihood for models estimated via OLS
- Add "robust" option for logit and probit (compute QML
  or Huber-White covariance matrix)
- Add "robust" standard errors option for WLS
- Remove overly verbose notification dialogs
- Add importers for Eviews workfiles and Stata .dta files