@@ -96,6 +96,7 @@ under the terms of the \emph{GNU Free Documentation License}, Version
 \include{criteria}
 \include{looping}
 \include{functions}
+\include{persistent}
 \include{vecm}
 \include{trouble}
 \include{cli}
